# ssl-RACOON-AI-beta

./: .editorconfig  .flake8  .gitattributes  .gitignore  .gitmessage.txt  .pre-commit-config.yaml  INSTALL.md  LICENSE  Makefile  RACOON-AI.asta  README.md  install_deps_macos_arm.sh  m_plus.conf  pyproject.toml  racoon-ai.xml  verchew.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  version.yml
cmd/: ball_status.py  drbr_test.py  gui.py  joystick_mode.py  kicker_test.py  run.py  wireless_cap_test.py
models/official/field/: pose_2_d.py
models/official/game_controller/: stage.py  team_info.py
networks/: command_sender.py  ref_receiver.py  responce_receiver.py  vision_receiver.py
proto_py/: grSim_Commands_pb2.py  messages_robocup_ssl_wrapper_pb2.py
racoon_ai/: __init__.py  __main__.py  config.ini
racoon_ai/common/: __init__.py  controls.py  intersection.py  math_utils.py
racoon_ai/comms/: communicate.py
racoon_ai/game/: __init__.py  game.py  state.py
racoon_ai/game/rules/: __init__.py  on_default.py  on_force_start.py  on_halt.py  on_normal_start.py  on_stop.py  on_test.py
racoon_ai/gui/: __init__.py  animated_toggle.py  background.py  chart.py  field.py  game_control.py  main.py  paint.py  robot.py  view.py  vision.py
racoon_ai/gui/modules/: __init__.py  animated_toggle.py  background.py  chart.py  game_control.py  main.py  robot.py  vision.py
racoon_ai/models/: __init__.py
racoon_ai/models/ball/: __init__.py  ball.py
racoon_ai/models/coordinate/: __init__.py
racoon_ai/models/custom/: robot_custom_command.py  robot_custom_feedback.py
racoon_ai/models/game_controller/: ref_message.py
racoon_ai/models/geometry/: __init__.py  geometry.py
racoon_ai/models/grsim/: commands.py  packet.py  replacement.py  robot_feedback.py
racoon_ai/movement/: __init__.py  basics.py  controls.py
racoon_ai/networks/: __init__.py  command_sender.py  ref_receiver.py  responce_receiver.py  response_receiver.py  status_reciever.py  vision_receiver.py
racoon_ai/observer/: __init__.py  observer.py
racoon_ai/proto_py/: game_event_pb2.py  grSim_Commands_pb2.py  grSim_Commands_pb2.pyi  grSim_Packet_pb2.py  grSim_Packet_pb2.pyi  grSim_Replacement_pb2.py  grSim_Replacement_pb2.pyi  grSim_Robotstatus_pb2.py  grSim_Robotstatus_pb2.pyi  messages_robocup_ssl_geometry_pb2.py  messages_robocup_ssl_refbox_log_pb2.py  messages_robocup_ssl_robot_status_pb2.py  messages_robocup_ssl_wrapper_pb2.py  referee_pb2.py  ssl_gc_common_pb2.pyi  ssl_gc_game_event_pb2.py  ssl_gc_game_event_pb2.pyi  ssl_gc_geometry_pb2.py  ssl_gc_geometry_pb2.pyi  ssl_gc_referee_message_pb2.py  ssl_gc_referee_message_pb2.pyi  ssl_gc_state_pb2.py  ssl_gc_state_pb2.pyi  ssl_simulation_config_pb2.pyi  ssl_simulation_control_pb2.pyi  ssl_simulation_error_pb2.pyi  ssl_simulation_robot_control_pb2.pyi  ssl_simulation_robot_feedback_pb2.pyi  ssl_simulation_synchronous_pb2.pyi  ssl_vision_detection_pb2.pyi  ssl_vision_geometry_pb2.py  ssl_vision_geometry_pb2.pyi  ssl_vision_wrapper_pb2.pyi  ssl_wrapper_pb2.py
racoon_ai/strategy/: __init__.py  attacker.py  ball_placement.py  base.py  defense.py  goal_keeper.py  offense.py  out_of_play.py  role.py  strategy.py  subrole.py
scripts/windows/: install-deps.ps1  install-scoop.ps1
src/comms/: communicate.py
src/networks/: command_sender.py  ref_receiver.py  responce_receiver.py  vision_receiver.py
src/proto_py/: game_event_pb2.py  grSim_Packet_pb2.py  grSim_Replacement_pb2.py  messages_robocup_ssl_detection_pb2.py  messages_robocup_ssl_refbox_log_pb2.py  messages_robocup_ssl_robot_status_pb2.py  messages_robocup_ssl_wrapper_pb2.py  referee_pb2.py
src/strategy/: attacker.py
(+109 files in other folders)
