[tool.poetry]
name = "racoon-ai"
version = "0.0.1"
description = "Ri-one Accurate Operation AI"
authors = ["Ri-one-SSL <rionesslq@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10.*"
protobuf = "^3.19.1"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
isort = "^5.10.1"
flake8 = "^4.0.1"
pylint = "^2.12.2"
pre-commit = "^2.16.0"
pre-commit-hooks = "^4.0.1"
mypy = "^0.930"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
line_length = 120

[tool.pylint.messages_control]
# C0330, C0326: Conflict with black
# R0902: Too many instance attributes
# R0913: Too many arguments
disable = "C0330, C0326, R0902, R0913"

[tool.pylint.format]
max-line-length = "120"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
