[tool.poetry]
name = "racoon_ai"
version = "0.0.1"
description = "Ri-one Accurate Operation AI"
authors = ["Ri-one-SSL <rionesslq@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10.*"
protobuf = "^3.19.1"
types-protobuf = "^3.18.2"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"
isort = {extras = ["colors"], version = "^5.10.1"}
mypy = "^0.930"
mypy-protobuf = "^3.1.0"
pre-commit = "^2.16.0"
pre-commit-hooks = "^4.0.1"
protoletariat = "^0.7.1"
pylint = "^2.12.2"

[tool.black]
line-length = 120
extend-exclude = "racoon_ai/proto/pb_gen"

[tool.isort]
profile = "black"
line_length = 120
skip_glob = ["racoon_ai/proto/pb_gen/*"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.pylint.basic]
good-names = ["i", "j", "k", "x", "y", "z"]

[tool.pylint.master]
ignore = "pb_gen"

[tool.pylint.messages_control]
# C0330, C0326: Conflict with black
# R0902: Too many instance attributes
# R0913: Too many arguments
disable = "C0330, C0326, R0902, R0913"

[tool.pylint.format]
max-line-length = "120"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
